--- a/styles/style.css
+++ b/styles/style.css
@@ -112,3 +112,43 @@
     border-radius: 5px;
     margin-bottom: 10px;
 }
+
+.login-form{
+    max-width: 400px; /* Set a maximum width for the form */
+    margin: 0 auto;
+    margin-top: 15%;
+}
+#loginBtn{
+    margin-top: 5%;
+    background-color: #0a6e35;
+    margin-left: 30%;
+}
+
+#inputUsername{
+    margin-top: 3%;
+    margin-bottom: 4%;
+    max-width: 300px;
+}
+
+#inputPassword{
+    margin-top: 3%;
+    max-width: 300px;
+    margin-bottom: 3%;
+}
+
+.register-form{
+    max-width: 400px; /* Set a maximum width for the form */
+    margin: 0 auto;
+    margin-top: 8%;
+}
+#inputFirstName, #inputLastName, #inputEmail, #inputConfirmPassword, #inputPasswordR{
+    margin-top:3%;
+    max-width:300px;
+    margin-bottom: 3%;
+}
+
+#RegisterBtn{
+    margin-top: 5%;
+    background-color: #0a6e35;
+    margin-left: 25%;
+}
