--- a/styles/style.css
+++ b/styles/style.css
@@ -152,3 +152,25 @@
     background-color: #0a6e35;
     margin-left: 25%;
 }
+
+.blog-card {
+    margin-bottom: 20px;
+    margin-right: 100px;
+}
+/* .blog-image {
+    width: 10%;
+    height: auto;
+} */
+
+.blog-image {
+    
+    max-width: 50%; /* Adjust the width of the image as needed */
+    height: auto;
+    
+    border-radius: 5px;
+    margin-left: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+
